--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply from: 'config.gradle'
-
 buildscript {
     ext.kotlin_version = '1.3.61'
     apply from: 'config.gradle'
     repositories {
-        google()
         jcenter()
-        
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+      google()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:${versions.androidPlugin}"
-        classpath "com.google.gms:google-services:${versions.googleServices}"
-        classpath "com.google.android.gms:strict-version-matcher-plugin:${versions.googleStrictVersionMatcher}"
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,13 +23,9 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
         maven { url "https://jitpack.io" }
-        maven { url "https://zendesk.jfrog.io/zendesk/repo" }
-        maven { url "https://repo.leanplum.com/" }
-        maven { url "https://dl.bintray.com/onfido/maven" }
-        maven { url "https://s3.amazonaws.com/repo.commonsware.com" }
+        google()
     }
 }
 
