--- a/config.gradle
+++ b/config.gradle
@@ -2,53 +2,35 @@ ext {
   androidConfig = [
       compileSdkVersion: 29,
       buildToolsVersion: '29.0.2',
-      minSdkVersion    : 19,
-      targetSdkVersion : 28,
-      versionCode      : 2028000,
-      versionName      : '2.28.0'
+      minSdkVersion: 19,
+      targetSdkVersion: 28,
+      versionCode: 1,
+      versionName: '1.0'
   ]
   versions = [
-      // Gradle plugins
-      androidPlugin               : '3.5.2',
-      googleServices              : '4.2.0',
-      googleStrictVersionMatcher  : '1.0.2',
-      // Libraries
-      appcompat                   : '1.0.2',
-      androidX                    : '1.0.0',
-      androidKtx                  : '1.0.0',
-      googlePlayCore              : '1.6.1',
+      appcompat                   : '1.1.0',
+      androidX                    : '1.1.0',
+      androidKtx                  : '1.1.0',
+      constraintLayout            : '1.1.3',
+      okhttp                      : '4.0.1',
       retrofit                    : '2.6.1',
-      javaxAnnotationApi          : '1.2',
       rxViper                     : '1.0.0-rc3',
       rxAndroid                   : '1.2.1',
       rxAndroid2                  : '2.1.1',
       rxJava                      : '1.3.3',
       rxPermissions               : '0.9.4',
       dagger                      : '2.24',
-      googlePlayServicesBase      : '16.0.1',
-      googlePlayServiceMaps       : '16.0.0',
-      googlePlayServiceTagManager : '16.0.6',
-      googlePlayServiceLocation   : '16.0.0',
-      googlePlayServiceAnalytics  : '16.0.6',
-      googlePlayServiceNearby     : '16.0.0',
-      firebaseCore                : '16.0.6',
-      firebaseMessaging           : '18.0.0',
-      firebaseJobdispatcher       : '0.7.0',
-      okhttp                      : '4.0.1',
-      constraintLayout            : '1.1.3',
-      leakCanary                  : '1.5.1',
-
-      // dynamic animations
-      dynamicAnimation            : '28.0.0',
-      robolectric                 : '4.3',
-      circularImageView           : '4.1.0',
-      bouncycastle                : '1.62',
-
-      // Test libraries
+      glide                       : '4.9.0',
+      glideTransformation         : '3.3.0',
+      glideOkHttp                 : '4.9.0',
+      javaxAnnotationApi          : '1.2',
+      stetho                      : '1.5.1',
+      okhttp_urlconnection        : '3.0.1',
+      room                        : '2.2.0-alpha01',
+      paging_ktx                  : '2.1.0',
+      saferoom                    : '1.0.1',
       junit                       : '4.12',
       mockitoKotlin               : '2.0.0',
-      androidRateVersion          : '0.5.3',
-
-      timber                      : '4.7.0'
+      robolectric                 : '4.3'
   ]
 }
