--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,7 +86,7 @@ android {
 
   sourceSets {
     androidTest.setRoot( 'src/test/java' )
-    main.java.srcDirs += 'src/main/kotlin'
+    main.java.srcDirs += 'src/main/java'
   }
 }
 
