--- a/app/constants.gradle
+++ b/app/constants.gradle
@@ -5,7 +5,7 @@ final bool = "boolean"
 final string = "String"
 final True = "true"
 final False = "false"
-final END_POINT = "https://api.thecatapi.com/v1/"
+final BASE_URL = "https://www.themealdb.com"
 
 final IS_PRODUCTION = "IS_PRODUCTION"
 final SSL_DISABLED = "SSL_DISABLED"
@@ -16,7 +16,7 @@ android {
     // common config for all build variants
     buildConfigField bool, IS_PRODUCTION, False
     buildConfigField string, "PLATFORM", "\"Android\""
-    buildConfigField string, "ENDPOINT", "\"$END_POINT\""
+    buildConfigField string, "BASE_URL", "\"$BASE_URL\""
   }
 
   productFlavors {
